
        * ace/Semaphore.cpp:
          Change to improve support for platforms missing shmopen().

Thu Nov 18 14:35:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * ace/config-cygwin32.h:
          Changed some defines to improve Cygwin build.

Thu Nov 18 07:38:34 2004  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Service_Config.cpp:

          Distinguish between the existence of and the file permissions for
          the default service configurator file (svc.conf).

Thu Nov 18 07:10:26 2004  Chad Elliott  <elliott_c@ociweb.com>

        * examples/Logger/Acceptor-server/Logger_Acceptor_Server.mpc:
        * examples/Logger/client/Logger_client.mpc:
        * examples/Logger/simple-server/Logger_Simple_Server.mpc:

          Added exename settings to these.  They use ACE_MAIN, but that's no
          longer recognized by MPC as an exe entry point.

        * performance-tests/Synch-Benchmarks/Base_Test/Synch_Benchmarks_Base_Test.mpc:
        * performance-tests/Synch-Benchmarks/Perf_Test/Synch_Benchmarks_Perf_Test.mpc:

          Changed these library projects to inherit from acelib instead of
          aceexe.

        * protocols/protocols.mwc:

          Added a default workspace so that msvc_mpc_auto_compile.pl can
          find the HTBP (and future libraries).

Thu Nov 18 06:48:28 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/envinfo.cpp:

          Added #include "ace/OS_NS_sys_utsname.h" to get ACE_utsname.

Thu Nov 18 12:36:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Threads/task_three.cpp:
          Changed ACE cast macros with the c++ versions

Wed Nov 17 18:37:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * tests/test_config.h:
          Added include of OS_NS_fcntl.h needed for VxWorks build.

Wed Nov 17 08:53:11 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Makefile.am:

          Updated.

        * ace/ace.mpc:

          Added Memory_Pool.h to Header_Files.
