@@ -1929,6 +1929,8 @@ Chris Hammond <chrish at navsys dot com>
 Vincent Spano <spam dot robot at go dot away>
 Nuno Silva <Nuno dot Silva at edisoft dot pt>
 Greg Bostrum <greg dot bostrom at hp dot com>
+Dipa Suri <dipa dot suri at lmco dot com>
+Adam Howell <adam dot s dot howell at lmco dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
